using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class AnimationStrings
{
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jumpTrigger = "jump";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string isAlive = "isAlive";
    internal static string isRolling = "isRolling";
    internal static string attackTrigger = "attack";
    internal static string magicAttackTrigger = "magicAttack";
    internal static string canMove = "canMove";
    internal static string hasTarget = "hasTarget";
    internal static string isSpotted = "isSpotted";
    internal static string canClimb = "canClimb";
    internal static string isIdle = "isIdle";
    internal static string hitTrigger = "hit";
    internal static string healTrigger = "heal";
    internal static string lockVelocity = "lockVelocity";
    internal static string isCrouch = "isCrouch";
    internal static string dodgeTrigger = "dodgeTrigger";
    internal static string isThrowing = "isThrowing";
    internal static string isExplosion = "isExplosion";
    internal static string dodgeVelocity = "dodgeVelocity";
    internal static string jumpVelocity = "jumpVelocity";
    internal static string hitVelocity = "hitVelocity";
    internal static string vanishTrigger = "vanishTrigger";
    internal static string appearVelocity = "appearVelocity";
    internal static string rageAttack = "rageAttackTrigger";
    internal static string isRage = "isRage";
    internal static string isRageVelocity = "isRageVelocity";
}
